cluster/flux/flux-system/flux-patches.yaml
---
# Delete the allow-egress NetworkPolicy
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: flux-system
---
# Delete the allow-scraping NetworkPolicy
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-scraping
  namespace: flux-system
---
# Delete the allow-webhooks NetworkPolicy
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhooks
  namespace: flux-system
